--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Lorem ipsum dolor sit amet</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sint qui vel sit veritatis quos impedit nisi exercitationem architecto cupiditate repellat quae nesciunt consequuntur, ducimus, animi dignissimos id atque sunt! Culpa dicta voluptatem sint blanditiis ad. Odit sint consequatur hic quas! Maiores asperiores labore magni accusamus, cum dolorum eligendi praesentium?</p>
 
     <script src="dom.js"></script>
